# Kavach-AI

./: .gitignore  IMPROVEMENTS.md  README.md
auth-server/: package-lock.json  package.json  server.js
backend/: .dockerignore  Cargo.toml  Dockerfile  patch_auth.py
backend/src/: main.rs  state.rs
backend/src/models/: mod.rs  user.rs
backend/src/repository/: mod.rs  users.rs
backend/src/routes/: auth.rs
backend/src/services/: auth.rs  google_auth.rs  mod.rs
client/: .env.example  README.md  index.html  package-lock.json  package.json
client/public/: sw.js
client/src/: App.jsx  config.js  index.css
client/src/api/: axios.js  varunaApi.js
client/src/components/Alerts/: Alerts.css  Alerts.jsx
client/src/components/Auth/: ProtectedRoute.jsx
docs/: docs.txt
mailservice/app/: emailer.py  router.py  schemas.py
ml-services/: .dockerignore  Dockerfile  requirements.txt
ml-services/app/api/: health.py  sources.py
ml-services/app/connectors/: google_news.py
ml-services/app/services/: aggregator.py  chat.py  llm.py  retriever.py  scheduler.py  store.py
server/: package-lock.json  package.json  server.js  test-server.js
server/controllers/: alertsController.js  authController.js  mapController.js  postController.js  upvoteController.js  userController.js
server/middlewares/: authMiddleware.js  upload.js
server/models/: PostModel.js  UserModel.js
server/routes/: AuthRoutes.js  coastRoutes.js  incoisRoutes.js  mapRoutes.js  postRoutes.js  userRoutes.js
server/services/: incoisScraper.js  mailer.js
server/utils/: geocode.js
(+26 files in other folders)
